examples/test/testpolicy8575.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8575
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key38: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value2
          key20: value5
          key0: value35
      podSelector:
        matchLabels:
          key16: value1
          key15: value25
